# TVC-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  header.h  main.cpp  main.py  setup.py
GUI/: GUI.py  __init__.py  helpers.py
guidance/: trajectory.m
include/: INDIcontroller.h  PIDcontroller.h  actuator.h  controller.h  controller.ipp  dynamics.h  dynamics.ipp  estimator.h  filter.h  helpers.h  saturator.h  sensor.h
scripts/: CMakeLists.txt  PIDattitudeControl.cpp  PIDattitudeControl.h
src/: CMakeLists.txt  INDIcontroller.cpp  PIDcontroller.cpp  actuator.cpp  controller.cpp  dynamics.cpp  estimator.cpp  filter.cpp  helpers.cpp  saturator.cpp  sensor.cpp
